update index and quickstart